# fastapi-postgresql

./: pyproject.toml
pizza/: db.py  main.py  models.py
pizza/routes/: auth_routes.py  order_routes.py
pizza/schemas/: OrderSchema.py  UserSchema.py
